<resources>
    <string name="app_name">BEON</string>
    <string name="text_sign_up_for_free">Sign Up For Free</string>
    <string name="id_icon">icon</string>
    <string name="text_email">Email</string>
    <string name="text_username">Username</string>
    <string name="text_Password">Password</string>
    <string name="text_Keep">Keep me sign in</string>
    <string name="text_Pricing">Email me about special pricing</string>
    <string name="text_already_have_an_account">already have an account?</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_get_started">Fill in your bio to get started</string>
    <string name="text_data">This data will be displayed in your account profile for security</string>
    <string name="ic_back">back</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_next">Next</string>
    <string name="text_ready">Your Profile Is Ready To Use</string>
    <string name="text_congrats">Congrats!</string>
    <string name="img_ceklis">ceklis</string>
    <string name="text_try_now">Try Now</string>
    <string name="text_forgot_your_password">Forgot Your Password?</string>
    <string name="btn_imgbtn_fb">imgbtn_fb</string>
    <string name="btn_imgbtn_google">imgbtn_google</string>
    <string name="text_or_continue_with">Or Continue With</string>
    <string name="ltext_ogin_to_your_account">Login To Your Account</string>
    <string name="text_login">Login</string>
    <string name="text_find_your_best_workshop">Find Your Best Workshop</string>
    <string name="text_find_the_nearest_workshop">Find the nearest workshop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="text_imgbtn">imgbtn</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_select">Select which contact details should we use to reset your password</string>
    <string name="text_enter_4_digit_verification_code">Enter 4-digit Verification code</string>
    <string name="text_code_send_to_6282045_this_code_will_expired_in_01_30">Code send to +6282045****.</string>
    <string name="text_input_your_number_phone">Via SMS</string>
    <string name="text_via_email">Via Email</string>
    <string name="text_this_code_will_expired_in_01_30">This code will expired in 01:30</string>
    <string name="text_reset_your_password_here">Reset your password here</string>
    <string name="text_select_which">Select which contact details should we use to reset your password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_password_reset_succesful">Password reset succesful</string>
    <string name="text_filter">Filter</string>
    <string name="text_category">Category</string>
    <string name="text_0_100">0 - 100$</string>
    <string name="text_price_range">Price Range</string>
    <string name="text_toyota">Toyota</string>
    <string name="text_daihatsu">Daihatsu</string>
    <string name="text_yamaha">Yamaha</string>
    <string name="text_view_more">View More</string>
    <string name="text_brand">Brand</string>
    <string name="text_motorbike_service">Motorbike Service</string>
    <string name="text_car_service">Car Service</string>
    <string name="text_reset">Reset</string>
    <string name="text_customer_review">Customer Review</string>

</resources>