<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".ForgotActivity">

    <ImageButton
        android:id="@+id/imgbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@color/color_transparent"
        android:contentDescription="@string/text_imgbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_top_nis_chat"
        android:layout_marginEnd="@dimen/spacing_large"
        android:fontFamily="@font/popsemibold"
        android:text="@string/text_forgot_password"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_title_content_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgbtn_back"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_back" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/popreguler"
        android:text="@string/text_select"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@id/tv_forgot"
        app:layout_constraintStart_toStartOf="@id/tv_forgot"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_signup"
        android:drawableStart="@drawable/mes"
        android:drawablePadding="@dimen/spacing_normal_quarter"
        android:ems="10"
        android:hint="@string/text_input_your_number_phone"
        android:inputType="number"
        android:padding="@dimen/font_small"
        android:textSize="@dimen/font_regular"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_signup"
        android:ems="10"
        android:layout_marginTop="@dimen/spacing_large_med"
        android:hint="@string/text_via_email"
        android:drawableStart="@drawable/em"
        android:drawablePadding="@dimen/spacing_normal_quarter"
        android:textSize="@dimen/font_regular"
        android:inputType="textEmailAddress"
        android:padding="@dimen/font_small"
        app:layout_constraintStart_toStartOf="@id/edt_number"
        app:layout_constraintEnd_toEndOf="@id/edt_number"
        app:layout_constraintTop_toBottomOf="@id/edt_number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_giant_more_one"
        android:layout_marginEnd="@dimen/spacing_giant_more_one"
        android:layout_marginBottom="@dimen/spacing_larger"
        android:background="@drawable/custom_btn_create"
        android:fontFamily="@font/popmedium"
        android:text="@string/text_next"
        android:textSize="@dimen/font_large"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>