<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".PasswordActivity">

    <ImageView
        android:id="@+id/img_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:contentDescription="@string/text_imgbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_top_nis_chat"
        android:layout_marginEnd="@dimen/spacing_regular_large"
        android:fontFamily="@font/popsemibold"
        android:text="@string/text_reset_your_password_here"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_title_content_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/img_btn_back"
        app:layout_constraintTop_toBottomOf="@id/img_btn_back" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/popreguler"
        android:text="@string/text_select"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@id/tv_code"
        app:layout_constraintStart_toStartOf="@id/tv_code"
        app:layout_constraintTop_toBottomOf="@id/tv_code" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_signup"
        android:ems="10"
        android:layout_marginTop="@dimen/spacing_top_nis_chat"
        android:hint="@string/text_new_password"
        android:inputType="textPassword"
        android:padding="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_signup"
        android:ems="10"
        android:layout_marginTop="@dimen/spacing_regular_large"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="@+id/edt_firstname"
        app:layout_constraintStart_toStartOf="@+id/edt_firstname"
        app:layout_constraintTop_toBottomOf="@+id/edt_firstname" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_giant_more_one"
        android:layout_marginEnd="@dimen/spacing_giant_more_one"
        android:layout_marginBottom="@dimen/spacing_larger"
        android:background="@drawable/custom_btn_create"
        android:fontFamily="@font/popmedium"
        android:text="@string/text_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>